# lecture-testing-task

05_hw/: CMakeLists.txt  README.md  benchmarks.c  main.c  stack.c  stack.h  tests.c
